Displaying pagination information in Swagger UI